# worktimer

./: .env.example  .gitignore  Dockerfile  Handbuch.md  README.md  STATUS.md  docker-compose.dev.yml  docker-compose.yml  maintenance.md  pyproject.toml  requirements.txt
apps/absences/: admin.py  apps.py  exceptions.py  models.py  services.py  tasks.py  urls.py  views.py
apps/accounts/: adapters.py  admin.py  apps.py  models.py  signals.py  urls.py  views.py
apps/core/: admin.py  context_processors.py  middleware.py  models.py  permissions.py  urls.py  views.py
apps/hr/: apps.py  forms.py  services.py  urls.py  views.py
apps/overtime/: admin.py  apps.py  models.py  services.py  tasks.py  urls.py  views.py
apps/projects/: admin.py  models.py
apps/reports/: urls.py  views.py
apps/timesessions/: admin.py  apps.py  exceptions.py  models.py  services.py  tasks.py  urls.py  views.py
config/: celery.py  urls.py
config/settings/: base.py  development.py  production.py
templates/: base.html
templates/absences/: create.html  list.html  team_calendar.html
templates/account/: login.html  logout.html
templates/accounts/: profile.html
templates/help/: admin.html  employee.html  hr.html
templates/hr/: adjust_overtime.html  adjust_vacation.html  change_absence_type.html  correct_entry.html  dashboard.html  employee_absences.html  employee_confirm_delete.html  employee_detail.html  employee_entries.html  employee_form.html  employee_list.html  employee_schedule.html  employee_timesheet.html  enter_sick_leave.html  entry_create.html  entry_delete.html  (+3 more)
(+35 files in other folders)
